edge/api.caw.sh.ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api.caw.sh.ingress
  namespace: edge
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "https"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
    - hosts: 
      - api.caw.sh
      secretName: api.caw.sh
  rules:
    - host: api.caw.sh
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: api-caw-sh-svc
              servicePort: 8443
